crates/cfn-lsp/src/snapshots/cfn_lsp__destinations__tests__definitions__parse_with_outputs.snap
---
source: crates/cfn-lsp/src/destinations.rs
expression: targets
---
Ok(
    [
        JumpDestination {
            name: "MyTopic",
            type: Resource,
            span: Span {
                start: Position {
                    line: 1,
                    col: 2,
                },
                end: Position {
                    line: 1,
                    col: 8,
                },
            },
        },
        JumpDestination {
            name: "MyTopicValue",
            type: Output,
            span: Span {
                start: Position {
                    line: 4,
                    col: 2,
                },
                end: Position {
                    line: 4,
                    col: 13,
                },
            },
        },
    ],
)
